--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 1st generic Lisp Utils, much more to come
 &a tmp test use of the utils 
+https://docs.google.com/present/view?id=dfppzgjw_33fttsj6dm 
+    has old work and some potential new directions
+ 
