--- a/README
+++ b/README
@@ -4,3 +4,4 @@ https://docs.google.com/present/view?id=dfppzgjw_33fttsj6dm
     has old work and some potential new directions
  
 use http://www.quicklisp.org/ it even has KM now 
+http://mike.bobak.googlepages.com/clmath.txt on why cl has better intrisic math ability 
