--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 1st generic Lisp Utils, much more to come
 &a tmp test use of the utils 
+
 https://docs.google.com/present/view?id=dfppzgjw_33fttsj6dm 
     has old work and some potential new directions
  
 use http://www.quicklisp.org/ it even has KM now 
-http://mike.bobak.googlepages.com/clmath.txt on why cl has better intrisic math ability 
+
+http://mike.bobak.googlepages.com/clmath.txt on why cl has better intrinsic math ability 
