instans maybe useful for something more insteresting 2me than storm

--- a/README
+++ b/README
@@ -13,3 +13,6 @@ http://mike.bobak.googlepages.com/clmath.txt on why cl has better intrinsic math
 ;http://www.sbcl.org/manual/#sb_002dconcurrency
 ;;use sb-concurrency:mailbox maybe something pregel like
 ;&try http://storm-project.net/ about/multi-language.html  
+detour around giving: bit.ly/TP8gfz
+ 
+Hope to get to try http://cse.aalto.fi/instans/ soon. 
