--- a/README
+++ b/README
@@ -3,6 +3,7 @@
 
 https://docs.google.com/present/view?id=dfppzgjw_33fttsj6dm 
     has old work and some potential new directions
+& bottom of: http://bobak.site44.com/ has: http://bit.ly/TP8gfz
  
 use http://www.quicklisp.org/ it even has KM now 
 
@@ -18,3 +19,6 @@ Hope to get to try http://cse.aalto.fi/instans/ soon.
 
 Some of this could be translated to C++/Java via:
     http://www.isi.edu/isd/LOOM/Stella/index.html
+
+2013: had to reset user.name 
+Working on kaggle data-minip in km
