reset email2link again

--- a/README
+++ b/README
@@ -20,5 +20,5 @@ Hope to get to try http://cse.aalto.fi/instans/ soon.
 Some of this could be translated to C++/Java via:
     http://www.isi.edu/isd/LOOM/Stella/index.html
 
-2013: had to reset user.name 
+2013: had to reset user.name & email 
 Working on kaggle data-minip in km
